mobile members page

--- a/v1.5/members.html
+++ b/v1.5/members.html
@@ -70,7 +70,7 @@
         <div class = "container">
             <h2> Executive Board </h2>
             <div class = "row">
-                <div class = "col">
+                <div class = "col-6 col-sm-3">
                     <div class="dot blue">
                         <div class = "quote">I like pie</div>
                         <div class = "img-container">
@@ -80,7 +80,7 @@
                     <p class = "name"> Bongi Fleischer</p>
                     <p class = "role"> Chief Executive Officer <br> ceo@icb.berkeley.edu</p>
                 </div>
-                <div class = "col">
+                <div class = "col-6 col-sm-3">
                     <div class="dot red">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -90,7 +90,7 @@
                     <p class = "name"> Carlos Oriol Lopez-Tenorio</p>
                     <p class = "role"> Chief Financial Officer <br> cfo@icb.berkeley.edu</p>
                 </div>
-                <div class = "col">
+                <div class = "col-4 col-sm-3">
                     <div class="dot yellow">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -100,7 +100,7 @@
                     <p class = "name"> Maya Chen</p>
                     <p class = "role"> Chief Operations Officer <br> cpo@icb.berkeley.edu</p>
                 </div>
-                <div class = "col">
+                <div class = "col-4 col-sm-3">
                     <div class="dot red">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -110,9 +110,9 @@
                     <p class = "name"> Allan Lee</p>
                     <p class = "role"> Chief Sustainability Officer <br> cso@icb.berkeley.edu</p>
                 </div>
-            </div>
-            <div class = "row">
-                <div class = "col">
+            <!-- </div> -->
+            <!-- <div class = "row"> -->
+                <div class = "col-4 col-sm-4">
                     <div class="dot yellow">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -122,7 +122,7 @@
                     <p class = "name"> Grace Lam</p>
                     <p class = "role"> Chief Projects Officer <br> cpo@icb.berkeley.edu</p>
                 </div>
-                <div class = "col">
+                <div class = "col-6 col-sm-4">
                     <div class="dot blue">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -132,7 +132,7 @@
                     <p class = "name"> Jasmine Chen</p>
                     <p class = "role"> Chief Marketing Officer <br> cmo@icb.berkeley.edu</p>
                 </div>
-                <div class = "col">
+                <div class = "col-6 col-sm-4">
                     <div class="dot green">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -152,7 +152,7 @@
             <h2> Our Team </h2>
             
             <div class = "row">
-                <div class = "col">
+                <div class = "col-4 col-sm-3">
                     <div class="dot red">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -162,7 +162,7 @@
                     <p class = "name"> Abhinav Subramaniam </p>
                     <p class = "role"> Mechanical Engineering </p>
                 </div>
-                <div class = "col">
+                <div class = "col-4 col-sm-3">
                     <div class="dot blue">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -172,7 +172,7 @@
                     <p class = "name"> Anderson Lee</p>
                     <p class = "role"> Bioengineering </p>
                 </div>
-                <div class = "col">
+                <div class = "col-4 col-sm-3">
                     <div class="dot green">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -182,7 +182,7 @@
                     <p class = "name"> Anika Singhania </p>
                     <p class = "role"> Computer Science </p>
                 </div>
-                <div class = "col">
+                <div class = "col-4 col-sm-3">
                     <div class="dot yellow">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -192,9 +192,9 @@
                     <p class = "name"> Anjali Gurajapu </p>
                     <p class = "role"> Chemical Engineering </p>
                 </div>
-            </div>
-            <div class = "row">
-                <div class = "col">
+            <!-- </div>
+            <div class = "row"> -->
+                <div class = "col-4 col-sm-3">
                     <div class="dot yellow">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -204,7 +204,7 @@
                     <p class = "name"> Aryan Nair </p>
                     <p class = "role" >Chemical Engineering</p>
                 </div>
-                <div class = "col">
+                <div class = "col-4 col-sm-3">
                     <div class="dot red">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -214,7 +214,7 @@
                     <p class = "name">Batu Akkas</p>
                     <p class = "role"> Bioengineering </p>
                 </div>
-                <div class = "col">
+                <div class = "col-4 col-sm-3">
                     <div class="dot blue">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -224,7 +224,7 @@
                     <p class = "name"> Brendan Shih </p>
                     <p class = "role"> Undecided </p>
                 </div>
-                <div class = "col">
+                <div class = "col-4 col-sm-3">
                     <div class="dot green">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -234,9 +234,9 @@
                     <p class = "name"> Cait Starr</p>
                     <p class = "role"> Sustainable Envir. Design </p>
                 </div>
-            </div>
-            <div class = "row">
-                <div class = "col">
+            <!-- </div>
+            <div class = "row"> -->
+                <div class = "col-4 col-sm-3">
                     <div class="dot green">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -246,7 +246,7 @@
                     <p class = "name"> Courtnie Chan</p>
                     <p class = "role">Computer Science</p>
                 </div>
-                <div class = "col">
+                <div class = "col-4 col-sm-3">
                     <div class="dot yellow">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -256,7 +256,7 @@
                     <p class = "name"> Dan Chen</p>
                     <p class = "role">Statistics</p>
                 </div>
-                <div class = "col">
+                <div class = "col-4 col-sm-3">
                     <div class="dot red">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -266,7 +266,7 @@
                     <p class = "name"> Iris Hou</p>
                     <p class = "role">Interdisciplinary Studies</p>
                 </div>
-                <div class = "col">
+                <div class = "col-4 col-sm-3">
                     <div class="dot blue">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -276,9 +276,9 @@
                     <p class = "name">Jake Nuesca</p>
                     <p class = "role">Mechanical Engineering</p>
                 </div>
-            </div>
-            <div class = "row">
-                <div class = "col">
+            <!-- </div>
+            <div class = "row"> -->
+                <div class = "col-4 col-sm-3">
                     <div class="dot blue">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -288,7 +288,7 @@
                     <p class = "name"> Jeffrey Shen</p>
                     <p class = "role"> Architecture </p>
                 </div>
-                <div class = "col">
+                <div class = "col-4 col-sm-3">
                     <div class="dot green">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -298,7 +298,7 @@
                     <p class = "name"> Joe Li</p>
                     <p class = "role"> Mechanical Engineering</p>
                 </div>
-                <div class = "col">
+                <div class = "col-4 col-sm-3">
                     <div class="dot yellow">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -308,7 +308,7 @@
                     <p class = "name"> Katrina Gonzales</p>
                     <p class = "role"> Public Health + MCB</p>
                 </div>
-                <div class = "col">
+                <div class = "col-4 col-sm-3">
                     <div class="dot red">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -318,9 +318,9 @@
                     <p class = "name"> Laurel Nelson</p>
                     <p class = "role"> Bioengineering</p>
                 </div>
-            </div>
-            <div class = "row">
-                <div class = "col">
+            <!-- </div>
+            <div class = "row"> -->
+                <div class = "col-4 col-sm-3">
                     <div class="dot green">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -330,7 +330,7 @@
                     <p class = "name"> Leo Gamboa</p>
                     <p class = "role" >MCB + Political Science</p>
                 </div>
-                <div class = "col">
+                <div class = "col-4 col-sm-3">
                     <div class="dot yellow">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -340,7 +340,7 @@
                     <p class = "name"> Malena Kleiven</p>
                     <p class = "role"> Sustainable Env. Design </p>
                 </div>
-                <div class = "col">
+                <div class = "col-4 col-sm-3">
                     <div class="dot red">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -350,7 +350,7 @@
                     <p class = "name"> Michael Salamy </p>
                     <p class = "role"> Mechanical Engineering </p>
                 </div>
-                <div class = "col">
+                <div class = "col-4 col-sm-3">
                     <div class="dot blue">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -360,9 +360,9 @@
                     <p class = "name"> Natalie Deng</p>
                     <p class = "role"> Political Economics </p>
                 </div>
-            </div>
-            <div class = "row">
-                <div class = "col">
+            <!-- </div>
+            <div class = "row"> -->
+                <div class = "col-4 col-sm-3">
                     <div class="dot yellow">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -372,7 +372,7 @@
                     <p class = "name">Neema Rashidi</p>
                     <p class = "role">Molecular Cell Biology</p>
                 </div>
-                <div class = "col">
+                <div class = "col-4 col-sm-3">
                     <div class="dot red">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -382,7 +382,7 @@
                     <p class = "name">Nicole Mallow</p>
                     <p class = "role">Bioengineering</p>
                 </div>
-                <div class = "col">
+                <div class = "col-4 col-sm-3">
                     <div class="dot blue">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -392,7 +392,7 @@
                     <p class = "name"> Nik Yerasi</p>
                     <p class = "role">Data Science</p>
                 </div>
-                <div class = "col">
+                <div class = "col-4 col-sm-3">
                     <div class="dot green">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -402,9 +402,9 @@
                     <p class = "name">Philippa Steingberg</p>
                     <p class = "role">Molecular Cell Biology</p>
                 </div>
-            </div>
-            <div class = "row">
-                <div class = "col">
+            <!-- </div>
+            <div class = "row"> -->
+                <div class = "col-4 col-sm-3">
                     <div class="dot red">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -414,7 +414,7 @@
                     <p class = "name">Qianning Tang</p>
                     <p class = "role">Sustainable Env. Design</p>
                 </div>
-                <div class = "col">
+                <div class = "col-4 col-sm-3">
                     <div class="dot blue">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -424,7 +424,7 @@
                     <p class = "name">Regan Connel</p>
                     <p class = "role">Data Science</p>
                 </div>
-                <div class = "col">
+                <div class = "col-4 col-sm-3">
                     <div class="dot green">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -434,7 +434,7 @@
                     <p class = "name">Reid Johnson</p>
                     <p class = "role">Applied Math + Computer Science</p>
                 </div>
-                <div class = "col">
+                <div class = "col-4 col-sm-3">
                     <div class="dot yellow">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -444,9 +444,9 @@
                     <p class = "name"> Ryan Yu</p>
                     <p class = "role">Molecular Cell Biology</p>
                 </div>
-            </div>
-            <div class = "row">
-                <div class = "col">
+            <!-- </div>
+            <div class = "row"> -->
+                <div class = "col-4 col-sm-3">
                     <div class="dot yellow">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -456,7 +456,7 @@
                     <p class = "name">Shantaam Chawla</p>
                     <p class = "role">EECS</p>
                 </div>
-                <div class = "col">
+                <div class = "col-4 col-sm-3">
                     <div class="dot red">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -466,7 +466,7 @@
                     <p class = "name">Sunny Hsu</p>
                     <p class = "role">Civil Engineering</p>
                 </div>
-                <div class = "col">
+                <div class = "col-6 col-sm-3">
                     <div class="dot blue">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
@@ -476,7 +476,7 @@
                     <p class = "name">Tanthai Pongstien</p>
                     <p class = "role">Mechanical Engineering</p>
                 </div>
-                <div class = "col">
+                <div class = "col-6 col-sm-3">
                     <div class="dot green">
                         <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                         <div class = "img-container">
