--- a/v1.5/members.html
+++ b/v1.5/members.html
@@ -379,7 +379,7 @@
                         <img alt="nicole" src="../assets/img//members/nicole.png" class = "member"/>
                         </div>
                     </div>
-                    <p class = "name">Nicole Mallow</p>
+                    <p class = "name">Nicole Malow</p>
                     <p class = "role">Bioengineering</p>
                 </div>
                 <div class = "col-4 col-sm-3">
@@ -399,7 +399,7 @@
                         <img alt="pippa" src="../assets/img//members/pippa.png" class = "member"/>
                         </div>
                     </div>
-                    <p class = "name">Philippa Steingberg</p>
+                    <p class = "name">Philippa Steinberg</p>
                     <p class = "role">Molecular Cell Biology</p>
                 </div>
             <!-- </div>
@@ -421,7 +421,7 @@
                         <img alt="regan" src="../assets/img//members/regan.png" class = "member"/>
                         </div>
                     </div>
-                    <p class = "name">Regan Connel</p>
+                    <p class = "name">Regan Connell</p>
                     <p class = "role">Data Science</p>
                 </div>
                 <div class = "col-4 col-sm-3">
@@ -508,6 +508,5 @@
     <script src="../assets/js/script.js"></script>
     <script src="../assets/js/members.js"></script>
 </body>
-
 
 </html>
