--- a/v1.5/about.html
+++ b/v1.5/about.html
@@ -60,90 +60,76 @@
         </div>
     </nav>
 
-<h2> WELCOME TO ICB</h2>
-<h6>Our About page includes descripton of our </h6>
-<h6> values, mission, and history!</h6>
+<div class="container">
 
-<!--Our MISSION section-->
-    <div class="row">
-        <div class="column1">
-            <h4>Our Mission</h4>
-            <p> We are Invention Corps of Berkeley. As a collective, we are an interdisciplinary group of students driven to create
-            meaningful global impact through human-centered design. We partner with people and organizations with the objective of
-            creating tangible solutions in the realms of society, health, poverty, and the environment. </p>
+    <h1> WELCOME TO ICB</h1>
+    <h6>Our About page allows us to share our values, mission, and origin story with you! </h6>
 
-            <p> Our club hosts a semesterly showcase to share the work we have done on our projects typically with presentations and
-            live demos. This semester, we present our **Virtual Showcase**. Our theme this semester is *String Theory*. As the
-            pandemic has forced many of us apart, we were inspired by the natural forces keeping us together, which you'll see our
-            interpretations of throughout the website. </p>
+    <h2>Our Mission and Values</h2>
+    <h4>Inventing new ways to make a better world.</h4>
+    <p>
+        Our mission as a multidisciplinary organization focuses on human-centered design that partners with professors,
+        companies, non-profits, and any entity for social good on campus and beyond. Our goal is to develop specific projects
+        utilizing design thinking to improve or introduce solutions on poverty, health, environment, and society. As a diverse
+        organization of all skill sets and backgrounds, we are fueled by our individual passions and converge upon those
+        passions to create a holistic organization by continuously iterating with the goal of empowering ourselves and others.
+    </p>
 
-            <p> To adapt our tradition of creating a large-scale physical art piece, we were challenged to reimagine something virtually
-            collaborative and engaging. Deriving inspiration from the idea of the necessary and inevitable reaction of particles, we
-            created a structure of interacting, free-form 'blobs'. Each blob was designed individually by each of our amazingly
-            unique members, visually created as a representation of themselves and the color that represents them. </p>
+    <!--PILLARS 1 & 2 section-->
+        <div class="row">
+            <div class="column1">
+                <p>  Hello here will be some stuff. 
+                </p>
+            </div>
+            <div class="column2">
+                <figure>
+                    <img src="../assets/img/about/aboutpic1.png" alt="aboutpic1" id="aboutpic1" />
+                    <figcaption>Senior members Iris, Tori, Zulaika, and Manooshree at our Spring 2020 recruitment workshop.
+                    </figcaption>
+                </figure>
+            </div>
         </div>
-        <div class="column2">
-            <figure>
-                <img src="aboutpic1.png" alt="aboutpic1" id="aboutpic1" />
-                <figcaption>Members Jasmine and Jeffrey facilitating our Spring 2020 recruitment workshop. </figcaption>
-            </figure>
+
+
+    <!--PILLARS 3 & 4 section-->
+        <div class="row">
+            <div class="column1">
+                <figure>
+                    <img src="../assets/img/about/aboutpic2.png" alt="aboutpic2" id="aboutpic2" />
+                    <figcaption>Member Abhinav brainstorming during our Spring 2020 recruitment workshop. </figcaption>
+                </figure>
+            </div>
+            <div class="column2">
+                <h4 id="values">STUFF</h4>
+            </div>
         </div>
-    </div>
 
-
-<!--Our VALUES section-->
-    <div class="row">
-         <div class="column1">
-            <figure>
-                <img src="aboutpic2.png" alt="aboutpic2" id="aboutpic2" />
+    <!--Our ORIGIN STORY section-->
+        <div class="row">
+            <h2>Our Origin Story</h2>
+            <div class="column1">
+                <img src="../assets/img/about/aboutpic3.png" alt="aboutpic3" id="aboutpic3" />
                 <figcaption>Member Abhinav brainstorming during our Spring 2020 recruitment workshop. </figcaption>
-            </figure>
+            </div>
+            <div class="column2">
+                <p>
+                    From our founding class in 2017 to our current ICB family, we have grown immensely as a community. This organization was
+                    created by the University Innovation Fellows as part of the effort to increase undergraduate innovation and
+                    entrepreneurship throughout UC Berkeley. Since our beginnings, we have always championed multidisciplinary designers,
+                    thinkers, and leaders who seek to tackle the “wicked problems” of society through human-centered design. Unlike other
+                    design consulting organizations, we offer pro-bono partnerships and high quality deliverables as part of our dedication
+                    toward positive social impact.
+                </p>
+            </div>
         </div>
-        <div class="column2">
-            <h4 id="values">Our Values</h4>
-            <p> We are Invention Corps of Berkeley. As a collective, we are an interdisciplinary group of students driven to create
-            meaningful global impact through human-centered design. We partner with people and organizations with the objective of
-            creating tangible solutions in the realms of society, health, poverty, and the environment. </p>
 
-            <p> Our club hosts a semesterly showcase to share the work we have done on our projects typically with presentations and
-            live demos. This semester, we present our **Virtual Showcase**. Our theme this semester is *String Theory*. As the
-            pandemic has forced many of us apart, we were inspired by the natural forces keeping us together, which you'll see our
-            interpretations of throughout the website. </p>
+    <p>The initial concept of collaborative design-thinking, ideating, and inventing remains a crucial and ever-evolving
+    process of our club. Hence, we have no formal recruitment process (resumes, portfolios, etc.) and instead gauge creative
+    and collaborative skills through design challenges. Likewise, our club is completely operated by undergraduates and each
+    member has equal responsibility and agency in sustaining and improving our community.
+    </p>
 
-            <p> To adapt our tradition of creating a large-scale physical art piece, we were challenged to reimagine something virtually
-            collaborative and engaging. Deriving inspiration from the idea of the necessary and inevitable reaction of particles, we
-            created a structure of interacting, free-form 'blobs'. </p>
-        </div>
-    </div>
-
-<!--Our STORY section-->
-    <div class="row">
-        <div class="column1">
-            <h4>Our Story</h4>
-            <p> We are Invention Corps of Berkeley. As a collective, we are an interdisciplinary group of students driven to create
-            meaningful global impact through human-centered design. We partner with people and organizations with the objective of
-            creating tangible solutions in the realms of society, health, poverty, and the environment. </p>
-
-            <p> Our club hosts a semesterly showcase to share the work we have done on our projects typically with presentations and
-            live demos. This semester, we present our **Virtual Showcase**. Our theme this semester is *String Theory*. As the
-            pandemic has forced many of us apart, we were inspired by the natural forces keeping us together, which you'll see our
-            interpretations of throughout the website. </p>
-
-            <p> To adapt our tradition of creating a large-scale physical art piece, we were challenged to reimagine something virtually
-            collaborative and engaging. Deriving inspiration from the idea of the necessary and inevitable reaction of particles, we
-            created a structure of interacting, free-form 'blobs'. </p>
-        </div>
-        <div class="column2">
-            <figure>
-                <img src="aboutpic3.png" alt="aboutpic3" id="aboutpic3" />
-                <figcaption>Senior members Iris, Tori, Zulaika, and Manooshree at our Spring 2020 recruitment workshop. </figcaption>
-            </figure>
-        </div>
-    </div>
-
-
-
-
+</div>
 
     <!-- Footer -->
     <!-- <footer>
@@ -164,7 +150,7 @@
     <script src="../assets/js/members.js"></script>
 </body>
 
-<footer style="background-color: rgb(224, 107, 101); color: white; padding: 20px; text-align: center; margin-top: 20px;">Made with ♥ by the <span> <a style="color: white" href="webdevteam.html"> Invention Corps Web Team </a> </span> <br>Copyright © 2020
+<footer style="background-color: #B3CFE3; color: black; padding: 20px; text-align: center; margin-top: 20px;">Made with ♥ by the <span> <a style="color: black" href="webdevteam.html"> Invention Corps Web Team </a> </span> <br>Copyright © 2020
 </footer>
 
 </html>
