--- a/v1.5/about.html
+++ b/v1.5/about.html
@@ -78,38 +78,43 @@
     <!--PILLARS 1 & 2 section-->
         <div class="row">
             <div class="column1">
-                <p>  Hello here will be some stuff. 
-                </p>
+                <img src='../assets/img/about/pillars1&2.svg'>
             </div>
             <div class="column2">
                 <figure>
                     <img src="../assets/img/about/aboutpic1.png" alt="aboutpic1" id="aboutpic1" />
-                    <figcaption>Senior members Iris, Tori, Zulaika, and Manooshree at our Spring 2020 recruitment workshop.
+                    <figcaption>
+                        Senior members Iris, Tori, Zulaika, and Manooshree at our Spring 2020 recruitment workshop.
                     </figcaption>
                 </figure>
             </div>
         </div>
-
 
     <!--PILLARS 3 & 4 section-->
         <div class="row">
             <div class="column1">
                 <figure>
                     <img src="../assets/img/about/aboutpic2.png" alt="aboutpic2" id="aboutpic2" />
-                    <figcaption>Member Abhinav brainstorming during our Spring 2020 recruitment workshop. </figcaption>
+                    <figcaption>
+                        Members Jasmine and Jeffrey facilitating Spring Recruitment Workshop.
+                    </figcaption>
                 </figure>
             </div>
             <div class="column2">
-                <h4 id="values">STUFF</h4>
+                <img src='../assets/img/about/pillars3&4.svg'>
             </div>
         </div>
 
     <!--Our ORIGIN STORY section-->
         <div class="row">
-            <h2>Our Origin Story</h2>
             <div class="column1">
-                <img src="../assets/img/about/aboutpic3.png" alt="aboutpic3" id="aboutpic3" />
-                <figcaption>Member Abhinav brainstorming during our Spring 2020 recruitment workshop. </figcaption>
+                <h2>Our Origin Story</h2>
+                <figure>
+                    <img src="../assets/img/about/aboutpic3.png" alt="aboutpic3" id="aboutpic3" />
+                    <figcaption>
+                        The team wrapping up our Fall 2019 “Crystalized-themed” Showcase!
+                    </figcaption>
+                </figure>
             </div>
             <div class="column2">
                 <p>
@@ -119,9 +124,12 @@
                     thinkers, and leaders who seek to tackle the “wicked problems” of society through human-centered design. Unlike other
                     design consulting organizations, we offer pro-bono partnerships and high quality deliverables as part of our dedication
                     toward positive social impact.
+
                 </p>
             </div>
         </div>
+
+        
 
     <p>The initial concept of collaborative design-thinking, ideating, and inventing remains a crucial and ever-evolving
     process of our club. Hence, we have no formal recruitment process (resumes, portfolios, etc.) and instead gauge creative
