finishes inital spacing for about page desktop version

--- a/v1.5/about.html
+++ b/v1.5/about.html
@@ -65,9 +65,9 @@
     <h1> WELCOME TO ICB</h1>
     <h6>Our About page allows us to share our values, mission, and origin story with you! </h6>
 
-    <h2>Our Mission and Values</h2>
+    <h2 id="mission">Our Mission and Values</h2>
     <h4>Inventing new ways to make a better world.</h4>
-    <p>
+    <p id="front">
         Our mission as a multidisciplinary organization focuses on human-centered design that partners with professors,
         companies, non-profits, and any entity for social good on campus and beyond. Our goal is to develop specific projects
         utilizing design thinking to improve or introduce solutions on poverty, health, environment, and society. As a diverse
@@ -78,7 +78,7 @@
     <!--PILLARS 1 & 2 section-->
         <div class="row">
             <div class="column1">
-                <img src='../assets/img/about/pillars1&2.svg'>
+                <img src='../assets/img/about/pillars1&2.svg' id='pillars1'>
             </div>
             <div class="column2">
                 <figure>
@@ -101,14 +101,14 @@
                 </figure>
             </div>
             <div class="column2">
-                <img src='../assets/img/about/pillars3&4.svg'>
+                <img src='../assets/img/about/pillars3&4.svg' id='pillars3'>
             </div>
         </div>
 
     <!--Our ORIGIN STORY section-->
         <div class="row">
             <div class="column1">
-                <h2>Our Origin Story</h2>
+                <h2 id="values">Our Origin Story</h2>
                 <figure>
                     <img src="../assets/img/about/aboutpic3.png" alt="aboutpic3" id="aboutpic3" />
                     <figcaption>
@@ -117,7 +117,7 @@
                 </figure>
             </div>
             <div class="column2">
-                <p>
+                <p id="origin">
                     From our founding class in 2017 to our current ICB family, we have grown immensely as a community. This organization was
                     created by the University Innovation Fellows as part of the effort to increase undergraduate innovation and
                     entrepreneurship throughout UC Berkeley. Since our beginnings, we have always championed multidisciplinary designers,
@@ -131,7 +131,7 @@
 
         
 
-    <p>The initial concept of collaborative design-thinking, ideating, and inventing remains a crucial and ever-evolving
+    <p id="end">The initial concept of collaborative design-thinking, ideating, and inventing remains a crucial and ever-evolving
     process of our club. Hence, we have no formal recruitment process (resumes, portfolios, etc.) and instead gauge creative
     and collaborative skills through design challenges. Likewise, our club is completely operated by undergraduates and each
     member has equal responsibility and agency in sustaining and improving our community.
