--- a/v1.5/about.html
+++ b/v1.5/about.html
@@ -75,6 +75,12 @@
         passions to create a holistic organization by continuously iterating with the goal of empowering ourselves and others.
     </p>
 
+    <div class="mobile">
+        <img src='../assets/img/about/pillars1&2.svg' id='pillars1'>
+        <img src='../assets/img/about/pillars3&4.svg' id='pillars3'>
+
+    </div>
+
     <!--PILLARS 1 & 2 section-->
         <div class="row">
             <div class="column1">
@@ -136,6 +142,10 @@
     and collaborative skills through design challenges. Likewise, our club is completely operated by undergraduates and each
     member has equal responsibility and agency in sustaining and improving our community.
     </p>
+
+    <div class="mobile2">
+        <img src="../assets/img/about/aboutpic3.png" alt="aboutpic3mobile" id="aboutpic3mobile" />
+    </div>
 
 </div>
 
