fixed thumbnail size on desktop

--- a/v1.5/projects.html
+++ b/v1.5/projects.html
@@ -77,17 +77,19 @@
     <!-- Custom Scripts -->
     <script src="../assets/js/script.js"></script>
     <script src="../assets/js/members.js"></script>
-    <div style="background-image: url('../assets/img/projs-background.svg');">
     <div class="container">
-        <h2 id ="projects-header" class="jumptarget" style="padding-bottom: 3%;">PROJECTS GALLERY</h2>
+        <h2 id ="projects-header" class="jumptarget">PROJECTS GALLERY</h2>
+        <p id="projects-subtitle">View our assortment of projects through the years!</p>
         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consequat nunc, enim libero varius purus, consectetur vel sem. </p> -->
+        <div style="background-image: url('../assets/img/projects/leftbg.png');" class="full-width">
         <div class="container">
             <div class="row">
-              <div class="col-6 col-sm-4">
+              <div class="col-6 col-sm-4" style="text-align: center">
                 <div style="padding-bottom: 10%;">
                 <a href="projects/alemany-farms.html">
-                    <img src="../assets/img/projthumbnails/newalemany.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%" alt="Alemany Farm">
+                    <img src="../assets/img/projthumbnails/newalemany.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%" alt="Alemany Farm">
                 </a>
+                <br>
                 <mark style="border-radius: 10%; background-color: #CCE6FF;">Mobile UI Design</mark>
                 <mark style="border-radius: 10%; background-color: #FFF6A9;">Environment</mark>
                 <mark style="border-radius: 10%; background-color: #CCF4D5;">Figma</mark>
@@ -95,97 +97,97 @@
 
                 </div>
               </div>
-              <div class="col-6 col-sm-4">
+              <div class="col-6 col-sm-4" style="text-align: center">
                 <div style="padding-bottom: 10%;">
                 <a href="projects/communitycafe.html">
-                    <img src="../assets/img/projthumbnails/newnetic.svg" class="project-tile" alt="Pizza with a Purpose" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
+                    <img src="../assets/img/projthumbnails/newnetic.svg" class="project-tile" alt="Pizza with a Purpose" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
                 </a>
                 </div>
               </div>
-              <div class="col-6 col-sm-4">
+              <div class="col-6 col-sm-4" style="text-align: center">
                 <div style="padding-bottom: 10%;">
                 <a href="projects/netic.html">
-                    <img src="../assets/img/projthumbnails/newcc.svg" class="project-tile" alt="NeoMotion AI" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
+                    <img src="../assets/img/projthumbnails/newcc.svg" class="project-tile" alt="NeoMotion AI" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
                 </a>
                 </div>
               </div>
-                <div class="col-6 col-sm-4">
+                <div class="col-6 col-sm-4" style="text-align: center">
                     <div style="padding-bottom: 10%;">
                     <a href="projects/berkeley-student-food-collective.html">
-                        <img src="../assets/img/projthumbnails/moffmake.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;"
+                        <img src="../assets/img/projthumbnails/moffmake.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;"
                         alt="Berkeley Student Food Collective">
                     </a>
                     </div>
                 </div>
-                <div class="col-6 col-sm-4">
+                <div class="col-6 col-sm-4" style="text-align: center">
                     <div style="padding-bottom: 10%;">
                     <a href="projects/makerspace.html">
-                        <img src="../assets/img/projthumbnails/newgs.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
+                        <img src="../assets/img/projthumbnails/newgs.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
                     </a>
                     </div>
                 </div>
-                <div class="col-6 col-sm-4">
+                <div class="col-6 col-sm-4" style="text-align: center">
                     <div style="padding-bottom: 10%;">
                     <a href="projects/groupsource.html">
-                        <img src="../assets/img/projthumbnails/newbsfc.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
+                        <img src="../assets/img/projthumbnails/newbsfc.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
                     </a>
                     </div>
                 </div>
-                <div class="col-6 col-sm-4">
+                <div class="col-6 col-sm-4" style="text-align: center">
                     <div style="padding-bottom: 10%;">
                     <a href="projects/berkeley-student-food-collective.html">
-                        <img src="../assets/img/projthumbnails/thrive.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;"
+                        <img src="../assets/img/projthumbnails/thrive.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;"
                         alt="Berkeley Student Food Collective">
                     </a>
                     </div>
                 </div>
-                <div class="col-6 col-sm-4">
+                <div class="col-6 col-sm-4" style="text-align: center">
                     <div style="padding-bottom: 10%;">
                     <a href="projects/makerspace.html">
-                        <img src="../assets/img/projthumbnails/visualize.svg" class="project-tile" alt="Moffitt Makerspace" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
+                        <img src="../assets/img/projthumbnails/visualize.svg" class="project-tile" alt="Moffitt Makerspace" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
                     </a>
                     </div>
                 </div>
-                <div class="col-6 col-sm-4">
+                <div class="col-6 col-sm-4" style="text-align: center">
                     <div style="padding-bottom: 10%;">
                     <a href="projects/groupsource.html">
-                        <img src="../assets/img/projthumbnails/hofmann.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
+                        <img src="../assets/img/projthumbnails/hofmann.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
                     </a>
                     </div>
                 </div>
-                <div class="col-6 col-sm-4">
+                <div class="col-6 col-sm-4" style="text-align: center">
                     <div style="padding-bottom: 10%;">
                     <a href="projects/berkeley-student-food-collective.html">
-                        <img src="../assets/img/projthumbnails/fub.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;"
+                        <img src="../assets/img/projthumbnails/fub.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;"
                         alt="Berkeley Student Food Collective">
                     </a>
                     </div>
                 </div>
-                <div class="col-6 col-sm-4">
+                <div class="col-6 col-sm-4" style="text-align: center">
                     <div style="padding-bottom: 10%;">
                     <a href="projects/makerspace.html">
-                        <img src="../assets/img/projthumbnails/concha.svg" class="project-tile" alt="Moffitt Makerspace" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
+                        <img src="../assets/img/projthumbnails/concha.svg" class="project-tile" alt="Moffitt Makerspace" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
                     </a>
                     </div>
                 </div>
-                <div class="col-6 col-sm-4">
+                <div class="col-6 col-sm-4" style="text-align: center">
                     <div style="padding-bottom: 10%;">
                     <a href="projects/groupsource.html">
-                        <img src="../assets/img/projthumbnails/kinetic.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
+                        <img src="../assets/img/projthumbnails/kinetic.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
                     </a>
                     </div>
                 </div>
-                <div class="col-6 col-sm-4">
+                <div class="col-6 col-sm-4" style="text-align: center">
                     <div style="padding-bottom: 10%;">
                     <a href="projects/groupsource.html">
-                        <img src="../assets/img/projthumbnails/d4j.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
+                        <img src="../assets/img/projthumbnails/d4j.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
                     </a>
                     </div>
                 </div>
-                <div class="col-6 col-sm-4">
+                <div class="col-6 col-sm-4" style="text-align: center">
                     <div style="padding-bottom: 10%;">
                     <a href="projects/groupsource.html">
-                        <img src="../assets/img/projthumbnails/catheter.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
+                        <img src="../assets/img/projthumbnails/catheter.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
                     </a>
                     </div>
                 </div>
