now works for pretty much any size device oof

--- a/v1.5/about.html
+++ b/v1.5/about.html
@@ -78,7 +78,7 @@
     </p>
 
     <h2 id="mission">Our Mission and Values</h2>
-    <h4>Inventing new ways to make a better world.</h4>
+    <h4 id="invent">Inventing new ways to make a better world.</h4>
     <p id="front">
         Our mission as a multidisciplinary organization focuses on human-centered design that partners with professors,
         companies, non-profits, and any entity for social good on campus and beyond. Our goal is to develop specific projects
