--- a/indexv15.html
+++ b/indexv15.html
@@ -17,7 +17,7 @@
 
   <title>Invention Corps</title>
   <meta name="description" content="We are Invention Corps."/>
-  <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="../icb-website/assets/img/favicon.ico" type="image/x-icon" />
 
   <!-- Custom Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,600;1,700&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
   <!-- Bootstrap Styling -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <!-- Custom Styling -->
-  <link rel="stylesheet" href="assets/css/styles.css" type="text/css" />
+  <link rel="stylesheet" href="../icb-website/assets/css/stylesv15.css" type="text/css" />
 </head>
 
 <body>
@@ -60,16 +60,21 @@
     </nav>
 
     <!-- Landing Section -->
-    <section id="landing">
+        <div class="container">
+            <div style="background-image: url('../icb-website/assets/img/mainscroll1-5/landing_full_screen.png');" class="full-width">
+            </div>
+        </div>
+
+   <!-- <section id="landing">
         <div class="container d-flex align-items-center justify-content-center" id="landing-container">
             <div class="landing-text">
                 <h3><span class="landing-text-bkd">We are</span></h3>
                 <h1><span class="landing-text-bkd">Invention Corps</span></h1>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <!-- About Section -->
+    <!-- About Section 
     <section id="about">
         <div class="container">
             <h2 id ="about-header" class="jumptarget">Inventing ways to make a better world.</h2>
@@ -79,13 +84,12 @@
             <div style="background-image: assets/img/mainscroll1-5/pillar-island.png">
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <!-- Projects Section -->
+    <!-- Projects Section 
     <section id="projects">
         <div class="container">
-            <h2 id ="projects-header" class="jumptarget">Our Projects</h2>
-            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consequat nunc, enim libero varius purus, consectetur vel sem. </p> -->
+            <h2 id ="projects-header" class="jumptarget">Our Projects</h2> 
             <div class="container">
                 <div class="row">
                   <div class="col-6 col-sm-4">
@@ -141,9 +145,9 @@
               </div>
               </div>
         </div>
-    </section>
+    </section> -->
 
-    <!-- Contact Section -->
+    <!-- Contact Section 
     <section id="contact">
         <div class="container">
             <div class="contact-txt">
@@ -158,7 +162,13 @@
             </div>
         </div>
     </section>
-    </section>
+    </section> -->
+
+    <!-- Footer -->
+    <footer>
+        Made with ♥ by the
+        <span> <a href="v1.5/webdevteam.html"> Invention Corps Web Team </a> </span> <br>Copyright © 2020
+    </footer>
 
     <!-- Bootstrap Scripts -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
