--- a/v1.5/projects.html
+++ b/v1.5/projects.html
@@ -81,7 +81,7 @@
         <h2 id ="projects-header" class="jumptarget">PROJECTS GALLERY</h2>
         <p id="projects-subtitle">View our assortment of projects through the years!</p>
         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consequat nunc, enim libero varius purus, consectetur vel sem. </p> -->
-        <div style="background-image: url('../assets/img/projects/leftbg.png');" class="full-width">
+        <div style="background-image: url('../assets/img/projs-background.svg'); background-size: cover;">
         <div class="container">
             <div class="row">
               <div class="col-6 col-sm-4" style="text-align: center">
@@ -90,10 +90,12 @@
                     <img src="../assets/img/projthumbnails/newalemany.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%" alt="Alemany Farm">
                 </a>
                 <br>
+                <figcaption style="padding-top: 3%; width: 70%;">
                 <mark style="border-radius: 10%; background-color: #CCE6FF;">Mobile UI Design</mark>
                 <mark style="border-radius: 10%; background-color: #FFF6A9;">Environment</mark>
                 <mark style="border-radius: 10%; background-color: #CCF4D5;">Figma</mark>
-
+                <mark style="border-radius: 10%; background-color: #CCF4D5;">iOS Dev</mark>
+                </figcaption>
 
                 </div>
               </div>
