projects background better on desktop

--- a/v1.5/projects.html
+++ b/v1.5/projects.html
@@ -77,11 +77,11 @@
     <!-- Custom Scripts -->
     <script src="../assets/js/script.js"></script>
     <script src="../assets/js/members.js"></script>
+    <div style="background-image: url('../assets/img/projs-background.svg'); background-size: cover; background-position-y: -20%; background-repeat: no-repeat;">
     <div class="container">
         <h2 id ="projects-header" class="jumptarget">PROJECTS GALLERY</h2>
         <p id="projects-subtitle">View our assortment of projects through the years!</p>
         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consequat nunc, enim libero varius purus, consectetur vel sem. </p> -->
-        <div style="background-image: url('../assets/img/projs-background.svg'); background-size: cover;">
         <div class="container">
             <div class="row">
               <div class="col-6 col-sm-4" style="text-align: center">
